# ext-trait-error

./: Cargo.toml
src/: main.rs
